--- a/deliverance.tex
+++ b/deliverance.tex
@@ -5,7 +5,10 @@ Website Theming mit Deliverance und XDV
 
 Inhalt des Vortrags
 
-Das Problemfeld: Websitegestaltung aktuell
+Websitegestaltung ist essentiell
+    Eine der ersten Aufgaben bei Erstellung von Websites
+
+Das Problemfeld: Webdesign aktuell
 
     Notwendiges Wissen
         HTML
@@ -45,6 +48,8 @@ Was ist Deliverance?
 
     Trennung der Präsentation von Inhalt und Logik
         Viel saubere Trennung als mit Templatesprachen meistens umgesetzt
+
+###########
 
     Notwendiges Wissen
         HTML
