work in progres

--- a/deliverance.tex
+++ b/deliverance.tex
@@ -1,7 +1,26 @@
 Website Theming mit Deliverance und XDV
 =======================================
 
-% TODO: graphik - beispiel - 4 Folien
+graphiken
+- einführungsbeispiel
+- history deliverance / xdv
+- systemskizze deliverance
+- systemskizze xdv
+
+
+
+% TODO: check history dates in svn / git log
+
+OK % TODO: graphik - beispiel - 4 Folien
+OK % TODO: Graphik Systemskizze Cachingserver, Webserver, Deliverance, CMS System
+
+% TODO: graphik - Beispiel Plone
+% TODO: graphik ~ mapping von elementen
+
+
+% TODO: Systemskizze: Designer, Dropbox, Entwickler, Entwicklungsserver, Produktivserver, GIT
+% TODO: Website ungethemed - Website gethemed - Website eingeloggt, gethemed
+
 
 Inhalt des Vortrags
 
@@ -28,7 +47,6 @@ Das Problemfeld: Webdesign aktuell
         Entwicklungsteam - Zusatzaufgaben: Integration in Zielsystem, Veröffentlichung.
         Wasserfallmodell - Nachbesserungen für Designteam ist nachfolgend mühsam. Entwicklungsteam muss für Designänderungen immer kontaktiert werden.
 
-    % TODO: graphik - Beispiel Plone
 
 
 Was ist Deliverance?
@@ -37,9 +55,9 @@ Was ist Deliverance?
         Einfache Regeln beschreiben Transformation
         Basiert auf einer Idee von Paul Everitt aus dem Jahr 2005
 
-    Middlewaretool, Proxy % TODO: Graphik Systemskizze Cachingserver, Webserver, Deliverance, CMS System
+    Middlewaretool, Proxy
 
-    HTML Transformation durch Mapping von Elementen % TODO: graphik ~ mapping
+    HTML Transformation durch Mapping von Elementen
         Inhalte aus CMS System werden in Platzhalter von HTML Template gemappt
         Ähnlich XSL Transformationen
         Aus Content, Theme und XML Datei mit Regelanweisungen wird neues Dokument generiert
@@ -122,8 +140,6 @@ Der Deliverance Workflow
 
 
 Case Study: Grüne Akademie Steiermark
-    % TODO: Systemskizze: Designer, Dropbox, Entwickler, Entwicklungsserver, Produktivserver, GIT
-    % TODO: Website ungethemed - Website gethemed - Website eingeloggt, gethemed
 
 
 % TODO TODO
@@ -144,4 +160,8 @@ Zukunft
     Banjo - Web based Deliverance Rule Editing
 
 
+Thanks
+    Nate Aune (Deliverance Evangelist)
+    Laurence Rowe (deliverance-xdv-history)
+    Paul Everitt (Deliverance and XDV Ideas and Implementations)
 #
