--- a/deliverance-xdv-talk-content.tex
+++ b/deliverance-xdv-talk-content.tex
@@ -13,6 +13,7 @@
 \frame {
     \frametitle{Johannes Raggam}
     \begin{itemize}
+    \item Graz, Österreich
     \item Web-Entwicklung seit 2002
     \item Plone Entwicklung seit 2005
     \item Deliverance User seit 2009
@@ -178,7 +179,7 @@ $<$replace href="http://twitter.com/dzugtagung"\\
 
 \subsection{Designprozess aktuell - Workflow}
 \frame {
-    \frametitle{Workflow}
+    \frametitle{Designprozess aktuell - Workflow}
     \begin{itemize}
         \item Designteam
             \begin{itemize}
@@ -216,6 +217,16 @@ $<$replace href="http://twitter.com/dzugtagung"\\
 
 
 \section{Deliverance}
+
+\subsection{Was ist Deliverance?}
+\frame {
+    \frametitle{Was ist Deliverance?}
+    \begin{itemize}
+    \item Theming Engine für unterschiedliche Plattformen
+    \item HTML Transformation durch Mapping von Elementen
+    \item Trennung Präsentation - Inhalt
+    \end{itemize}
+}
 
 \subsection{Regeln}
 \frame {
@@ -265,7 +276,6 @@ $<$replace href="http://twitter.com/dzugtagung"\\
 }
 
 
-
 \section{XDV}
 \subsection{Allgemein}
 \frame {
@@ -311,24 +321,49 @@ $<$replace href="http://twitter.com/dzugtagung"\\
 }
 
 \section{Case Study}
-\subsection{Grüne Akademie}
+\subsection{Gruene Akademie}
 \frame {
-    \includegraphics[scale=0.45]{resources/xdv-systemskizze}
+    \includegraphics[scale=0.4]{resources/gruene-akademie-setup}
 }
-
+\frame {
+    \begin{itemize}
+        \item \url{http://gruene-akademie.at/}
+        \item Automatisches Theme Update (5 Sekunden Delay)
+        \item Bei Projektabschluss kann Dropbox Service wieder deaktiviert werden
+    \end{itemize}
+}
 
 
 \section{Outro}
 \subsection{Links}
 \frame {
     \begin{itemize}
-    \item \url{}
+    \item Deliverance
+        \begin{itemize}
+        \item Info: \url{http://deliveranceproject.org/}
+        \item PyPi: \url{http://pypi.python.org/pypi/Deliverance}
+        \item Doku: \url{http://packages.python.org/Deliverance/}
+        \item Code: \url{https://projects.openplans.org/deliverance/}
+        \end{itemize}
+    \item XDV
+        \begin{itemize}
+        \item PyPi: \url{http://pypi.python.org/pypi/xdv}
+        \item XDV/Plone: \url{http://pypi.python.org/pypi/collective.xdv}
+        \item Code: \url{http://codespeak.net/svn/z3/xdv/}
+        \end{itemize}
+    \item Mehr...
+        \begin{itemize}
+        \item Vortrag: \url{http://github.com/thet/dzug11.deliverance.vortrag}
+        \item Buildout: \url{http://github.com/thet/dzug11.deliverance.buildout}
+        \item Dropbox Integration: \url{http://bluedynamics.com/articles/johannes/drop-dead-dropbox-doings-with-deliverance}
+        \end{itemize}
     \end{itemize}
 }
 
 
 \subsection{Dank an}
 \frame {
+    \frametitle{Dank an}
     \begin{itemize}
     \item Nate Aune
     \item Carsten Senger
@@ -339,77 +374,6 @@ $<$replace href="http://twitter.com/dzugtagung"\\
 }
 
 
-%\section{KAPITEL}
-%\subsection{TITLE}
-%\frame {
-%    \frametitle{TITLE}
-%    \begin{itemize}
-%    \item
-%    \end{itemize}
-%}
-
-%\section{KAPITEL}
-%\subsection{TITLE}
-%\frame {
-%    \frametitle{TITLE}
-%    \begin{itemize}
-%    \item
-%    \end{itemize}
-%}
-
-%\section{KAPITEL}
-%\subsection{TITLE}
-%\frame {
-%    \frametitle{TITLE}
-%    \begin{itemize}
-%    \item
-%    \end{itemize}
-%}
-
-%\section{KAPITEL}
-%\subsection{TITLE}
-%\frame {
-%    \frametitle{TITLE}
-%    \begin{itemize}
-%    \item
-%    \end{itemize}
-%}
-
-%\section{KAPITEL}
-%\subsection{TITLE}
-%\frame {
-%    \frametitle{TITLE}
-%    \begin{itemize}
-%    \item
-%    \end{itemize}
-%}
-
-%\section{KAPITEL}
-%\subsection{TITLE}
-%\frame {
-%    \frametitle{TITLE}
-%    \begin{itemize}
-%    \item
-%    \end{itemize}
-%}
-
-%\section{KAPITEL}
-%\subsection{TITLE}
-%\frame {
-%    \frametitle{TITLE}
-%    \begin{itemize}
-%    \item
-%    \end{itemize}
-%}
-
-%\section{KAPITEL}
-%\subsection{TITLE}
-%\frame {
-%    \frametitle{TITLE}
-%    \begin{itemize}
-%    \item
-%    \end{itemize}
-%}
 
 %\section{KAPITEL}
 %\subsection{TITLE}
